--- a/Breast Cancer - Exploratory -Copy1.ipynb
+++ b/Breast Cancer - Exploratory -Copy1.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,233 +524,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>radius_mean</th>\n",
-       "      <th>texture_mean</th>\n",
-       "      <th>perimeter_mean</th>\n",
-       "      <th>area_mean</th>\n",
-       "      <th>smoothness_mean</th>\n",
-       "      <th>compactness_mean</th>\n",
-       "      <th>concavity_mean</th>\n",
-       "      <th>concave points_mean</th>\n",
-       "      <th>symmetry_mean</th>\n",
-       "      <th>fractal_dimension_mean</th>\n",
-       "      <th>radius_worst</th>\n",
-       "      <th>texture_worst</th>\n",
-       "      <th>perimeter_worst</th>\n",
-       "      <th>area_worst</th>\n",
-       "      <th>smoothness_worst</th>\n",
-       "      <th>compactness_worst</th>\n",
-       "      <th>concavity_worst</th>\n",
-       "      <th>concave points_worst</th>\n",
-       "      <th>symmetry_worst</th>\n",
-       "      <th>fractal_dimension_worst</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>radius_mean</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.323782</td>\n",
-       "      <td>0.997855</td>\n",
-       "      <td>0.987357</td>\n",
-       "      <td>0.170581</td>\n",
-       "      <td>0.506124</td>\n",
-       "      <td>0.676764</td>\n",
-       "      <td>0.822529</td>\n",
-       "      <td>0.147741</td>\n",
-       "      <td>0.311631</td>\n",
-       "      <td>0.969539</td>\n",
-       "      <td>0.297008</td>\n",
-       "      <td>0.965137</td>\n",
-       "      <td>0.941082</td>\n",
-       "      <td>0.119616</td>\n",
-       "      <td>0.413463</td>\n",
-       "      <td>0.526911</td>\n",
-       "      <td>0.744214</td>\n",
-       "      <td>0.163953</td>\n",
-       "      <td>0.007066</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>texture_mean</th>\n",
-       "      <td>0.323782</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.329533</td>\n",
-       "      <td>0.321086</td>\n",
-       "      <td>0.023389</td>\n",
-       "      <td>0.236702</td>\n",
-       "      <td>0.302418</td>\n",
-       "      <td>0.293464</td>\n",
-       "      <td>0.071401</td>\n",
-       "      <td>0.076437</td>\n",
-       "      <td>0.352573</td>\n",
-       "      <td>0.912045</td>\n",
-       "      <td>0.358040</td>\n",
-       "      <td>0.343546</td>\n",
-       "      <td>0.077503</td>\n",
-       "      <td>0.277830</td>\n",
-       "      <td>0.301025</td>\n",
-       "      <td>0.295316</td>\n",
-       "      <td>0.105008</td>\n",
-       "      <td>0.119205</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>perimeter_mean</th>\n",
-       "      <td>0.997855</td>\n",
-       "      <td>0.329533</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.986507</td>\n",
-       "      <td>0.207278</td>\n",
-       "      <td>0.556936</td>\n",
-       "      <td>0.716136</td>\n",
-       "      <td>0.850977</td>\n",
-       "      <td>0.183027</td>\n",
-       "      <td>0.261477</td>\n",
-       "      <td>0.969476</td>\n",
-       "      <td>0.303038</td>\n",
-       "      <td>0.970387</td>\n",
-       "      <td>0.941550</td>\n",
-       "      <td>0.150549</td>\n",
-       "      <td>0.455774</td>\n",
-       "      <td>0.563879</td>\n",
-       "      <td>0.771241</td>\n",
-       "      <td>0.189115</td>\n",
-       "      <td>0.051019</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>area_mean</th>\n",
-       "      <td>0.987357</td>\n",
-       "      <td>0.321086</td>\n",
-       "      <td>0.986507</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.177028</td>\n",
-       "      <td>0.498502</td>\n",
-       "      <td>0.685983</td>\n",
-       "      <td>0.823269</td>\n",
-       "      <td>0.151293</td>\n",
-       "      <td>0.283110</td>\n",
-       "      <td>0.962746</td>\n",
-       "      <td>0.287489</td>\n",
-       "      <td>0.959120</td>\n",
-       "      <td>0.959213</td>\n",
-       "      <td>0.123523</td>\n",
-       "      <td>0.390410</td>\n",
-       "      <td>0.512606</td>\n",
-       "      <td>0.722017</td>\n",
-       "      <td>0.143570</td>\n",
-       "      <td>0.003738</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>smoothness_mean</th>\n",
-       "      <td>0.170581</td>\n",
-       "      <td>0.023389</td>\n",
-       "      <td>0.207278</td>\n",
-       "      <td>0.177028</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.659123</td>\n",
-       "      <td>0.521984</td>\n",
-       "      <td>0.553695</td>\n",
-       "      <td>0.557775</td>\n",
-       "      <td>0.584792</td>\n",
-       "      <td>0.213120</td>\n",
-       "      <td>0.036072</td>\n",
-       "      <td>0.238853</td>\n",
-       "      <td>0.206718</td>\n",
-       "      <td>0.805324</td>\n",
-       "      <td>0.472468</td>\n",
-       "      <td>0.434926</td>\n",
-       "      <td>0.503053</td>\n",
-       "      <td>0.394309</td>\n",
-       "      <td>0.499316</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 radius_mean  texture_mean  perimeter_mean  area_mean  \\\n",
-       "radius_mean         1.000000      0.323782        0.997855   0.987357   \n",
-       "texture_mean        0.323782      1.000000        0.329533   0.321086   \n",
-       "perimeter_mean      0.997855      0.329533        1.000000   0.986507   \n",
-       "area_mean           0.987357      0.321086        0.986507   1.000000   \n",
-       "smoothness_mean     0.170581      0.023389        0.207278   0.177028   \n",
-       "\n",
-       "                 smoothness_mean  compactness_mean  concavity_mean  \\\n",
-       "radius_mean             0.170581          0.506124        0.676764   \n",
-       "texture_mean            0.023389          0.236702        0.302418   \n",
-       "perimeter_mean          0.207278          0.556936        0.716136   \n",
-       "area_mean               0.177028          0.498502        0.685983   \n",
-       "smoothness_mean         1.000000          0.659123        0.521984   \n",
-       "\n",
-       "                 concave points_mean  symmetry_mean  fractal_dimension_mean  \\\n",
-       "radius_mean                 0.822529       0.147741                0.311631   \n",
-       "texture_mean                0.293464       0.071401                0.076437   \n",
-       "perimeter_mean              0.850977       0.183027                0.261477   \n",
-       "area_mean                   0.823269       0.151293                0.283110   \n",
-       "smoothness_mean             0.553695       0.557775                0.584792   \n",
-       "\n",
-       "                 radius_worst  texture_worst  perimeter_worst  area_worst  \\\n",
-       "radius_mean          0.969539       0.297008         0.965137    0.941082   \n",
-       "texture_mean         0.352573       0.912045         0.358040    0.343546   \n",
-       "perimeter_mean       0.969476       0.303038         0.970387    0.941550   \n",
-       "area_mean            0.962746       0.287489         0.959120    0.959213   \n",
-       "smoothness_mean      0.213120       0.036072         0.238853    0.206718   \n",
-       "\n",
-       "                 smoothness_worst  compactness_worst  concavity_worst  \\\n",
-       "radius_mean              0.119616           0.413463         0.526911   \n",
-       "texture_mean             0.077503           0.277830         0.301025   \n",
-       "perimeter_mean           0.150549           0.455774         0.563879   \n",
-       "area_mean                0.123523           0.390410         0.512606   \n",
-       "smoothness_mean          0.805324           0.472468         0.434926   \n",
-       "\n",
-       "                 concave points_worst  symmetry_worst  fractal_dimension_worst  \n",
-       "radius_mean                  0.744214        0.163953                 0.007066  \n",
-       "texture_mean                 0.295316        0.105008                 0.119205  \n",
-       "perimeter_mean               0.771241        0.189115                 0.051019  \n",
-       "area_mean                    0.722017        0.143570                 0.003738  \n",
-       "smoothness_mean              0.503053        0.394309                 0.499316  "
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Threshold for removing correlated variables\n",
-    "threshold = 0.9\n",
-    "\n",
-    "# Absolute value correlation matrix\n",
-    "corr_matrix = df_data.corr().abs()\n",
-    "corr_matrix.head()"
+    "# Define the threshold for removing correlated variables\n",
+    "threshold = 0.9"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -960,12 +744,14 @@
        "smoothness_mean              0.503053        0.394309                 0.499316  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Get correlation of each variables\n",
+    "corr_matrix = df_data.corr().abs()\n",
     "# Upper triangle of correlations\n",
     "upper = corr_matrix.where(np.triu(np.ones(corr_matrix.shape), k=1).astype(np.bool))\n",
     "upper.head()"
@@ -973,27 +759,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 8 columns to remove.\n"
+      "Columns with correlation > 0.9:\n",
+      "-perimeter_mean\n",
+      "-area_mean\n",
+      "-concave points_mean\n",
+      "-radius_worst\n",
+      "-texture_worst\n",
+      "-perimeter_worst\n",
+      "-area_worst\n",
+      "-concave points_worst\n"
      ]
     }
    ],
    "source": [
     "# Select columns with correlations above threshold\n",
-    "to_drop = [column for column in upper.columns if any(upper[column] > threshold)]\n",
-    "\n",
-    "print('There are %d columns to remove.' % (len(to_drop)))"
+    "col_to_drop = [column for column in upper.columns if any(upper[column] > threshold)]\n",
+    "print('Columns with correlation > {}:\\n-{}'.format(threshold,\"\\n-\".join(col_to_drop)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1147,13 +940,13 @@
        "4                  0.07678         M  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_data_dropcorr = df_data.drop(columns = to_drop)\n",
+    "df_data_dropcorr = df_data.drop(columns = col_to_drop)\n",
     "df_data_dropcorr.head()"
    ]
   },
